syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.j5ik2o.threadWeaver.adaptor.grpc";

message CreateThreadRequest {
    string creator_id = 1;
    bool has_parent_id = 2;
    string parent_id = 3;
    string title = 4;
    bool has_remarks = 5;
    string remarks = 6;
    repeated string administrator_ids = 7;
    repeated string member_ids = 8;
    int64 create_at = 254;
}

message CreateThreadResponse {
    bool is_successful = 1;
    string thread_id = 2;
    repeated string error_messages = 3;
}

message DestroyThreadRequest {
    string thread_id = 1;
    int64 create_at = 254;
}

message DestroyThreadResponse {
    bool is_successful = 1;
    string thread_id = 2;
    repeated string error_messages = 3;
}

message JoinAdministratorIdsRequest {
    string thread_id = 1;
    repeated string account_ids = 2;
    int64 create_at = 254;
}

message JoinAdministratorIdsResponse {
    bool is_successful = 1;
    string thread_id = 2;
    repeated string error_messages = 3;
}

message LeaveAdministratorIdsRequest {
    string thread_id = 1;
    repeated string account_ids = 2;
    int64 create_at = 254;
}

message LeaveAdministratorIdsResponse {
    bool is_successful = 1;
    string thread_id = 2;
    repeated string error_messages = 3;
}

message JoinMemberIdsRequest {
    string thread_id = 1;
    repeated string account_ids = 2;
    int64 create_at = 254;
}

message JoinMemberIdsResponse {
    bool is_successful = 1;
    string thread_id = 2;
    repeated string error_messages = 3;
}

message LeaveMemberIdsRequest {
    string thread_id = 1;
    repeated string account_ids = 2;
    int64 create_at = 254;
}

message LeaveMemberIdsResponse {
    bool is_successful = 1;
    string thread_id = 2;
    repeated string error_messages = 3;
}

message AddMessagesRequest {
    string thread_id = 1;
    string sender_id = 2;
    repeated string messages = 3;
    int64 create_at = 254;
}

message AddMessagesResponse {
    bool is_successful = 1;
    repeated string message_ids = 2;
    repeated string error_messages = 3;
}

message RemoveMessagesRequest {
    string thread_id = 1;
    string sender_id = 2;
    repeated string message_ids = 3;
    int64 create_at = 254;
}

message RemoveMessagesResponse {
    bool is_successful = 1;
    repeated string message_ids = 2;
    repeated string error_messages = 3;
}


message GetThreadRequest {
    string thread_id = 1;
    string sender_id = 2;
}

message GetThreadResponse {
    string id = 1;
    string creator_id = 2;
    bool has_parent_id = 3;
    string parent_id = 4;
    bool has_remarks = 5;
    string title = 6;
    int64 createdAt = 254;
    int64 updatedAt = 255;
}